<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="250dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:src="@drawable/logo_demo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                android:padding="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_login_background"
                android:text="@string/login" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center">

                <View
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:text="@string/or" />

                <View
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_facebook" />

                <View
                    android:layout_width="22dp"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_google" />

            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

    <!-- command + option + l -->
    <!--    logo ImageView  -->


</androidx.appcompat.widget.LinearLayoutCompat>